@@ -11,6 +11,7 @@
     * Add Net::SSLeay::OCSP#cert_to_id method.
     * Add Net::SSLeay::X509#check_issued method.
     * Add Net::SSLeay::OCSP_ONEREQ class.
+    * Add Net::SSLeay::OCSP_ONEREQ#DESTROY method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
